criação do empacotamento e adição do swagger